# CHATGPT_BOT

./: .env  .gitignore  README.md  __main__.py  bot.py  dump.rdb  logger.py  main.py  pyproject.toml  run.py
app/: calculate_message_length.py  call_count_gpt.py  cmd_message.py  correct_text.py  count_token.py  database.py  escape_markdown.py  generators.py  handlers.py  keyboards.py  split_text.py  transcribe_audio.py
app/database/: __init__.py  config.py  db.py  redis.py
app/etc/: __init__.py  calculate_message_length.py  correct_text.py  count_token.py  split_text.py  transcribe_audio.py
app/handlers/: __init__.py  change_model.py  payments.py  process_generation.py  reset_context.py  select_model.py  states.py  static_messages.py
docs/: README-en.md  README-eng.md
