[tool.poetry]
name = "chat-gpt"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.46.0"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
tiktoken = "^0.7.0"
mysql-connector-python = "^9.1.0"
aiomysql = "^0.2.0"
aioredis = "^2.0.1"
redis = "^5.1.0"
pydub = "^0.25.1"
speechrecognition = "^3.10.4"
aiohttp = "^3.10.11"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
